--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                 </div>
                 <ul class="timeline">
                     <li><a href="https://www.linkedin.com/in/alexander-arvanitis/">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                       <!--   -->
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 >linkedin
+                                <h4 ><i class="fab fa-linkedin"></i>linkedin
                                 </h4>
                                 <h4 class="subheading"></h4>
                             </div>
@@ -171,10 +171,10 @@
                         </div>
                     </li></a>
                     <li class="timeline-inverted"><a href="https://github.com/alexwill44">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                       
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Github</h4>
+                                <h4><i class="fab fa-github-square timeline"></i>Github</h4>
                                 <h4 class="subheading"></h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">See my past and current projects</p></div>
