--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h2 class="section-heading text-uppercase">Personal Brand</h2>
                     <h3 class="section-subheading text-muted">I am changing careers with the hope of making a more meaningful contribution to society by engineering innovative and dynamic software . I am a forward thinking pragmatist, who excels in a team setting and I pride myself on a tireless work ethic. I have spent my professional life, diagnosing and repairing vehicles while managing small teams and representing various businesses both in a customer and business facing capacity.</h3>
                 </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-12 " id="skills">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
