--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Brand</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Links</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
