--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><h5 id="atm"> Alex Arvanitis </h5></a>
+                <a class="navbar-brand" href="#page-top"><h5 > Home </h5></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Brand</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Links</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -41,33 +41,35 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container">
+            <div class="container" id="title">
                 <div class="masthead-subheading"> Alex Arvanitis </div>
-                <div class="masthead-heading text-uppercase"></div> A Software engineer / Mechanic Hybrid </div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
-            </div>
+                <div class="masthead-heading text-uppercase"></div> A Software engineer / Mechanic Hybrid <p id="title_button"><a  class="btn btn-primary btn-xl text-uppercase" href="./assets/img/resume/SEI Arvanitis Resume  (3).pdf" download > Resume </a> </p> </div>
+            </div> 
         </header>
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Personal Brand</h2>
+                    <h2 class="section-heading text-uppercase">About Me</h2>
                     <h3 class="section-subheading text-muted">I
                         I am changing careers with the hope of making a more meaningful contribution to society by engineering innovative and dynamic software. I am an analytical and forward thinking pragmatist, who excels in a team setting. I pride myself on a strong work ethic. Building on my past experience I enjoy coding sturdy and robust backend software. I have spent my professional life, diagnosing and repairing vehicles while managing small teams and representing various businesses both in a customer and business facing capacity.</h3>
                 </div>
                     <div class="col-lg-12 " id="skills">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                        <span class="fa-stack fa-4x skill_icon">
+                                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Skills and Proficiencies</h4>
-                        <p class="text-muted">
-                            <li> <i class="fab fa-js-square"></i> javaScript</li>
+                        <h4 class="my-3 skill_title"> Skills and Proficiencies </h4>
+                        <div class="text skill_card">
+                        <ul id="skills_a">
+                            <li><i class="fab fa-js-square"></i> javaScript</li>
                             <li><i class="fab fa-sass"></i>Sass & Css</li>
                             <li><i class="fab fa-python"></i>Python</li>
                             <li><i class="fab fa-node"></i>Node JS</li>
                             <li><i class="fab fa-html5"></i>HTML</li>
                             <li><i class="fab fa-react"></i>React</li>
+                        </ul>
+                        <ul id="skills_b">
                             <li><i class="fas fa-file-export"></i> Express </li>
                             <li><i class="fab fa-dyalog"></i> Django </li>
                             <li><i class="fas fa-leaf"></i> Mongoose </li>
@@ -75,8 +77,8 @@
                             <li><i class="fab fa-github"></i>Github</li>
                             <li><i class="fab fa-slack"></i>Slack</li>
                             <li><i class="fab fa-neos"></i> Notion </li>
-                            
-                        </p>
+                        </ul>
+                    </div>
                     </div>
                 </div>
             </div>
