--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </header>
         <!-- Services-->
         <section class="page-section" id="services">
-            <div class="container">
+            <div class="container skill_box">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About Me</h2>
                     <h3 class="section-subheading text-muted">I
