--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container skill_box">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About Me</h2>
-                    <h3 class="section-subheading text-muted">I
+                    <h3 class="section-subheading text-muted">
                         I am changing careers with the hope of making a more meaningful contribution to society by engineering innovative and dynamic software. I am an analytical and forward thinking pragmatist, who excels in a team setting. I pride myself on a strong work ethic. Building on my past experience I enjoy coding sturdy and robust backend software. I have spent my professional life, diagnosing and repairing vehicles while managing small teams and representing various businesses both in a customer and business facing capacity.</h3>
                 </div>
                     <div class="col-lg-12 " id="skills">
