--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                     <p class="item-intro text-muted"> <a href="https://github.com/alexwill44/service_record_manager"> Github Repo </a></p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.png" alt="..." />
                                     <p>A management system for tracking parts and service associated with specific motorcycles (though the application could easily be built out for any repair facility). 
-                                    There is also a client facing portal with to allow the business to give customers updates in real time.
+                                    There is also a client facing portal which allows the business to give customers updates in real time.
                                     </p>
                                     <ul class="list-inline">
                                     </ul>
@@ -267,7 +267,7 @@
 <a href="https://github.com/alexwill44/all-trails-remaster"> Github Repo </a></p>                                        
                                     </p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.png" alt="..." />
-                                    <p>As a non-account user I can search for new trails and see descriptions and ratings about those trails. I can also create an account from a user registration page so I can contribute to the trails catalog with new trails and reviews of current trails, as well as track my past and future. I can create custom lists of trails (for example, trails I would like to hike, trails in a specific area, or trails to share with a friend). I can view other users completed hikes and aspirational trails lists.</p>
+                                    <p>As a non-account user you can search for new trails and see descriptions and ratings about those trails. You can also create an account from a user registration page so you can contribute to the trails catalog with new trails and reviews of current trails, as well as track your past and future. You can create custom lists of trails (for example, trails you would like to hike, trails in a specific area, or trails to share with a friend). You can view other users completed hikes and aspirational trails lists.</p>
                                     <ul class="list-inline">
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -327,10 +327,10 @@
                                     </p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.png" alt="..." />
                                     <p>
-                                        This was my first ever software enignnering project and it is based entirely around jQuery.
-                                        Ride and repair your own motorcycle, do you have what it takes to keep it on the road?
+                                        This was my first ever software engineering project and it is based entirely around jQuery.
+                                        "Ride and repair your own motorcycle, do you have what it takes to keep it on the road?
 
-                                        The rules are simple: You are the rider, repair your bike on the go, keep the tank full, and the tires fresh.
+                                        The rules are simple: You are the rider, repair your bike on the go, keep the tank full, and the tires fresh."
                                         
                                         </p>
                                     <ul class="list-inline">
@@ -346,76 +346,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio item 5 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Southwest
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Website Design
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-times me-1"></i>
-                                        Close Project
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Portfolio item 6 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Window
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Photography
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-times me-1"></i>
-                                        Close Project
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
