--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <header class="masthead">
             <div class="container" id="title">
                 <div class="masthead-subheading"> Alex Arvanitis </div>
-                <div class="masthead-heading text-uppercase"></div> A Software engineer / Mechanic Hybrid <p id="title_button"><a  class="btn btn-primary btn-xl text-uppercase" href="./assets/img/resume/SEI Arvanitis Resume  (3).pdf" download > Resume </a> </p> </div>
+                <div class="masthead-heading text-uppercase"></div> A Software engineer / Mechanic Hybrid <p id="title_button"><a  class="btn btn-primary btn-xl text-uppercase" href="./assets/img/resume/Alex_Arvanitis_Resume.pdf" download > Resume </a> </p> </div>
             </div> 
         </header>
         <!-- Services-->
