added deployment links to project modals

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Record Keeper</h2>
                                     <p class="item-intro text-muted"> <a href="https://github.com/alexwill44/service_record_manager"> Github Repo </a></p>
+                                    <p class="item-intro text-muted"> <a href="https://service-record-keeper.herokuapp.com/"> Deployment </a></p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.png" alt="..." />
                                     <p>A management system for tracking parts and service associated with specific motorcycles (though the application could easily be built out for any repair facility). 
                                     There is also a client facing portal which allows the business to give customers updates in real time.
@@ -264,8 +265,9 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">All Trails Remaster</h2>
                                     <p class="item-intro text-muted">
-<a href="https://github.com/alexwill44/all-trails-remaster"> Github Repo </a></p>                                        
+                                        <a href="https://github.com/alexwill44/all-trails-remaster"> Github Repo </a>
                                     </p>
+                                    <p> <a href="https://all-trails-remaster.herokuapp.com/"> Deployment </a> </p>                          
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.png" alt="..." />
                                     <p>As a non-account user you can search for new trails and see descriptions and ratings about those trails. You can also create an account from a user registration page so you can contribute to the trails catalog with new trails and reviews of current trails, as well as track your past and future. You can create custom lists of trails (for example, trails you would like to hike, trails in a specific area, or trails to share with a friend). You can view other users completed hikes and aspirational trails lists.</p>
                                     <ul class="list-inline">
@@ -293,8 +295,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Tripolocity</h2>
                                     <p class="item-intro text-muted">
-<a href="https://github.com/alexwill44/wayfarer"> Github Repo </a></p>                                        
-                                    </p>
+                                        <a href="https://github.com/alexwill44/wayfarer"> Github Repo </a>
+                                    </p>  
+                                    <p class="item-intro text-muted">
+                                        <a href="https://tripelocity.herokuapp.com/"> Deployment </a>
+                                    </p>                   
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.png" alt="..." />
                                     <p>Travel community website for users to share posts about their favorite locations around the world. Dark themed
                                     </p>
@@ -323,7 +328,10 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">My Moto</h2>
                                     <p class="item-intro text-muted">
-<a href="https://github.com/alexwill44/My-Moto"> Github Repo </a></p>                                        
+                                        <a href="https://github.com/alexwill44/My-Moto"> Github Repo </a>
+                                    </p>                   
+                                    <p class="item-intro text-muted">
+                                        <a href="https://alexwill44.github.io/My-Moto/"> Deployment </a>
                                     </p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.png" alt="..." />
                                     <p>
